Planificación de citas ediante slots